# Code-Dependency-Impact-Analyzer-For-Large-Codebases-

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  install.cmd  install.ps1  install.sh  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py  main.py  models.py
backend/middleware/: auth.py
backend/routes/: __init__.py  analyze.py  code.py  graph.py  models.py  projects.py  upload.py
cli/: __init__.py  console.py  docker_manager.py  main.py  project_registry.py  session_manager.py
cli/commands/: __init__.py  analyze.py  model.py  parse.py  projects.py  query.py  serve.py  start.py  status.py  stop.py  visualize.py
config/: llama.env  llama.env.example  tigergraph.env  tigergraph.env.example
data/: edges.csv  vertices.csv
data/analysis_output/: vertices.csv
data/sample_code/: app.py  auth.py  calculator.py  database.py
data/sample_code_scratch/: README.md  main.py
data/sample_code_scratch/repositories/: __init__.py  order_repo.py  user_repo.py
data/sample_code_scratch/services/: __init__.py  auth_service.py  notification_service.py  order_service.py
data/sample_code_scratch/utils/: __init__.py  audit.py  pricing.py
data/sample_code_scratch_output/: dependency_graph.json  edges.csv  vertices.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: CodeEditor.jsx  FileUpload.jsx  GraphCanvas.jsx  ImpactPanel.jsx  ModelManager.jsx  ProjectSwitcher.jsx  QueryInput.jsx
graph/: __init__.py  load_data.py  queries.gsql  schema.gsql  target_resolver.py  tigergraph_client.py  wait_for_tg.py
llm/: __init__.py  auto_config.py  crypto.py  explainer.py  llama_client.py  model_registry.py  ollama_setup.py  query_parser.py
llm/adapters/: __init__.py  base.py  huggingface_adapter.py  ollama_adapter.py  openai_adapter.py
parser/: __init__.py  ast_parser.py  cache.py  graph_builder.py  utils.py
tests/: conftest.py  test_backend_analyze.py  test_cli_entrypoint.py  test_cli_lifecycle.py  test_cli_workflows.py
