[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-impact-analyzer"
version = "1.0.0"
description = "If I change this file/function → what will break? AST parsing + TigerGraph + LLaMA impact analysis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Code Impact Team"},
]
keywords = ["code-analysis", "dependency-graph", "impact-analysis", "tigergraph", "llama", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # ── CLI ───────────────────────────────────────
    "click>=8.1.0",
    "rich>=13.7.0",

    # ── Web Framework ────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",

    # ── TigerGraph ───────────────────────────────
    "pyTigerGraph>=1.6.0",

    # ── HTTP / Networking ────────────────────────
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # ── Utilities ────────────────────────────────
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Ujjansh05/Code-Dependency-Impact-Analyzer-For-Large-Codebases-"
Repository = "https://github.com/Ujjansh05/Code-Dependency-Impact-Analyzer-For-Large-Codebases-"
Issues = "https://github.com/Ujjansh05/Code-Dependency-Impact-Analyzer-For-Large-Codebases-/issues"

# ── CLI Entry Point ──────────────────────────────────
[project.scripts]
code-impact = "cli.main:cli"

# ── Setuptools Config ────────────────────────────────
[tool.setuptools.packages.find]
include = ["cli*", "parser*", "graph*", "llm*", "backend*"]

[tool.setuptools.package-data]
"*" = [
    "*.gsql",
    "*.env",
    "*.yml",
    "*.yaml",
    "*.csv",
    "*.json",
    "*.html",
    "*.css",
    "*.jsx",
    "*.js",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --ignore-glob=pytest-cache-files-*"
testpaths = ["tests"]
